-bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
-bug#0001166: Installer does not properly handle disabled guest_user conversion
-bug#0001182: Subdirectories are not secure and allow browsing
-bug#0001191: Faulty IP address validation by ping.php script
-bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
-bug#0001215: Impossible to define a none availability with the client cli/add_device.php
-bug#0001236: set 'stats_recache' to zero when no re-index is present
-bug#0001244: missing closing </form> on host.php
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: initialization of snmp_auth when using SNMP=NONE
-bug: speed up add_graphs.php in most cases (still slow only if --input-fields is used)
-bug: If the poller_output table is not empty, don't flood the log
-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Graph Export would fail while zooming on some systems
-bug: Add API Automation tool quietMode to additional functions
-bug: SNMP string cleanup removes too many '=' signs
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: database upgrade and cacti.sql differ
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0001235: CLI script needed to activate a query: add_data_query.php
-feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page